<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zenbedded_hardware_interface</name>
  <version>0.0.1</version>
  <description>Zenoh-based hardware interface for Zephyr RTOS and ros2_control</description>
  <maintainer email="itzkamalkant@gmail.com">kamal2730</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gmock</test_depend>

  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>zenoh_cpp_vendor</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface_plugin>zenbedded_hardware_interface.xml</hardware_interface_plugin>
  </export>
</package>
