<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zephyr_zenoh_hardware_interface</name>
  <version>0.0.1</version>
  <description>Zenoh-based hardware interface for Zephyr RTOS and ros2_control</description>
  <maintainer email="itzkamalkant@gmail.com">kamal2730</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface_plugin>zenoh_zephyr_hardware_interface.xml</hardware_interface_plugin>
  </export>
</package>
